# qpat

./: README.md  pyproject.toml  setup.py
examples/: run_simulation.py  test_minimal_pipeline.py  test_yaml_to_builder.py  topology.yaml  workflow.yaml
qpat/analysis/coincidences/: base.py  window_method.py
qpat/capabilities/: base.py  factory.py  polarization_analysis.py  registry.py
qpat/experiment/: experiment.py  orchestrator.py  parser.py  specs.py  topology.py  workflow.py  workflow_parser.py
qpat/simulation/: engine.py  tasks.py  view.py
qpat/simulation/adapters/: sequence_adapter.py
qpat/simulation/adapters/components/: beam_splitter.py  detector.py  light_source.py  wave_plate.py
qpat/simulation/adapters/nodes/: polarization_measurement_node.py  source_node.py
